# protected-fishing-areas

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: airflow.cfg
backend/: Dockerfile  main.py  requirements.txt
dags/: config.py  gfw_fishing_effort_ingestion.py  wdpa_protected_areas_ingestion.py
dbt/: .user.yml
dbt/protected_fishing_areas/: .user.yml  dbt_project.yml  profiles.yml
dbt/protected_fishing_areas/models/marts/: _marts__models.yml  fct_fishing_effort.sql  fct_protected_areas.sql
dbt/protected_fishing_areas/models/staging/gfw/: _gfw__models.yml  _gfw__sources.yml  stg_gfw__fishing.sql
dbt/protected_fishing_areas/models/staging/wdpa/: _wdpa__models.yml  _wdpa__sources.yml  stg_wdpa__metadata.sql  stg_wdpa__polygons.sql
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
streamlit_app/: Dockerfile  app.py  requirements.txt
